--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "confusion",
-  "homepage": "https://ttanner44.github.io/confusion", 
+  "homepage": "https://ttanner44.github.io/confusion",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-popper": "^2.2.4",
     "react-scripts": "4.0.2",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
